<resources>
    <string name="app_name">Crime Scene</string>
    <string name="home">Home</string>
    <string name="investigate">Investigate</string>
    <string name="reference">Reference</string>
    <string name="tips">Tips</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="guide">Guide</string>
    <string name="guides_description">Quick guides</string>
    <string name="sign_out">Sign Out</string>
    <string name="welcome">Welcome to the Crime Scene</string>
    <string name="first_time_user"><u>First time user? Begin </u></string>
    <string name="samle_text">Hey, so I had this query. I killed my neighbour by accident. Is it a crime?</string>
    <string name="chat_hint">Voice your concern</string>
    <string name="post">POST</string>
    <string name="anonymous"> Anonymous?</string>
    <string name="anonymously">Anonymous.</string>
    <string name="murder_kidanapping_or_similar_case">Murder, Kidanapping or similar case</string>
    <string name="add_notes">Add notes.</string>
    <string name="add_sketch_photograph">Add sketch/photograph.</string>
    <string name="add_a_new_case_file">Add a new Case File</string>
    <string name="add_case_title_number">Add case title/number</string>
    <string name="incoming_call">damsel</string>
    <string name="incoming_call_text">in distress</string>
    <string name="all_cases">All Cases</string>
    <string name="no_notes_added">No notes added</string>
    <string name="notes">Notes</string>
    <string name="this_is_a_note">This is a note.</string>
    <string name="add">Add</string>
    <string name="case_priority">Case priority:</string>
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
    <string name="save">Save</string>
    <string name="mark_as_closed">Mark as closed?</string>
    <string name="stop">Stop</string>
    <string name="your_location_is_being_shared_with_the_nearest_officer_of_the_law">Your location is being shared with the nearest officer of the law</string>
    <string name="sos">SOS Mode</string>
    <string name="case_priorities">Case Priorities:</string>
    <string name="no_cases_yet">No cases yet</string>
    <string name="coplease">CopLease</string>
    <string name="todo">TODO</string>
</resources>
