<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activities.Sauce">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textAlignment="center"
        android:text="@string/sos"
        android:layout_marginTop="30dp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_alignParentStart="true"
        android:fontFamily="@font/roboto_bold"
        android:padding="8dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textAlignment="center"
        android:layout_above="@id/stop_emergency"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/roboto_bold"
        android:padding="8dp"
        android:text="@string/your_location_is_being_shared_with_the_nearest_officer_of_the_law"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/stop"
        android:padding="20dp"
        android:theme="@style/ButtonStyle"
        android:background="@drawable/stop_circle"
        android:layout_centerInParent="true"
        android:id="@+id/stop_emergency"/>

</RelativeLayout>