<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"


    >

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="570dp"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/chat_recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_gravity="bottom"
        android:background="@color/colorSecondary"
        android:gravity="center"

        android:padding="10dp">

        <Switch


            android:id="@+id/go_anonymous"
            android:layout_width="130dp"
            android:layout_height="10dp"
            android:layout_above="@id/new_message_ET"
            android:layout_centerVertical="true"
            android:layout_marginBottom="0dp"
            android:checked="false"

            android:text="@string/anonymous"

            android:textColor="@android:color/white" />

        <EditText
            android:id="@+id/new_message_ET"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/new_chat"
            android:hint="@string/chat_hint"

            android:padding="8dp" />

        <Button
            android:id="@+id/post_button"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:layout_marginStart="4dp"
            android:layout_toEndOf="@id/new_message_ET"
            android:background="@drawable/post_button"
            android:gravity="center"
            android:padding="2dp"
            android:text="@string/post"
            android:textColor="@android:color/white"
            android:textSize="8sp" />
    </RelativeLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>