<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:padding="8dp"
    tools:context=".activities.AddFileActivity">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/add_a_new_case_file"
        android:textAlignment="center"
        android:textColor="@color/colorSecondary"
        android:textSize="28sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="8dp" />
    <EditText
        android:id="@+id/file_name"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:hint="@string/add_case_title_number"
        android:textColorHint="@color/colorSecondary"
        app:layout_constraintBottom_toTopOf="@+id/main_ll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/choose_murder"

        android:layout_width="60dp"
        android:layout_height="70dp"
        android:layout_above="@id/main_ll"
        android:layout_marginBottom="-80dp"



        android:background="@drawable/crimechoose_shape"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent">

        <com.mikhaellopez.circularimageview.CircularImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_murder"

            app:civ_border_width="2dp" />
    </LinearLayout>
    <LinearLayout

        android:id="@+id/choose_fraud"
        android:layout_toRightOf="@id/choose_murder"

        android:layout_width="60dp"
        android:layout_height="70dp"
        android:layout_above="@id/main_ll"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="-80dp"


        android:background="@drawable/fraud_shape"
        android:gravity="center"
        app:layout_constraintStart_toEndOf="@id/choose_murder"
        >

        <com.mikhaellopez.circularimageview.CircularImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_fraud" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/choose_missing"
        android:layout_width="60dp"
        android:layout_height="70dp"
        android:layout_marginBottom="-80dp"


        android:layout_above="@id/main_ll"
        android:background="@drawable/treachures_shape"
        android:gravity="center"
        android:layout_toLeftOf="@id/choose_horrid"
        android:layout_marginEnd="20dp"
        >

        <com.mikhaellopez.circularimageview.CircularImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_missing" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/choose_horrid"
        android:layout_above="@id/main_ll"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="-80dp"

        android:layout_width="60dp"
        android:layout_height="70dp"

        android:background="@drawable/horrid_shape"
        android:gravity="center"
        >

        <com.mikhaellopez.circularimageview.CircularImageView
            android:layout_width="34dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_sexual" />
    </LinearLayout>


    <RelativeLayout

        android:id="@+id/main_ll"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/file_name"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="-10dp"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/murderous_red"
        android:gravity="center"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout

                android:id="@+id/white_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"


                android:background="@drawable/curved_rectangle_white"
                android:orientation="vertical"
                android:padding="15dp">

                <TextView
                    android:id="@+id/title_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/murder_kidanapping_or_similar_case"
                    android:textColor="@color/murderous_red"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/addpic_icon"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"


                    android:background="@drawable/circle"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_addpic" />


                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/add_sketch_photograph"
                    android:textColor="@color/colorSecondary"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/record_icon"

                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/circle"

                    android:gravity="center">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_record" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="Add voice recording."
                    android:textColor="@color/colorSecondary"
                    android:textStyle="bold"
                    tools:ignore="HardcodedText" />

                <LinearLayout
                    android:id="@+id/other_icon"

                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="50dp"
                    android:background="@drawable/circle"

                    android:gravity="center">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_other" />
                </LinearLayout>



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/add_notes"
                    android:textColor="@color/colorSecondary"
                    android:textStyle="bold" />
                <EditText
                    android:id="@+id/case_note_ET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"/>
                <Button
                    android:id="@+id/save_case"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"

                    android:text="Save"


                  android:layout_gravity="end"

                    android:background="@drawable/button"


                    />


            </LinearLayout>
        </ScrollView>


    </RelativeLayout>
</RelativeLayout>
